--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Karšu pārlūks</h1>
     <div id='map' style='width: 400px; height: 300px;'></div>
     <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZGFpbmlzIiwiYSI6ImNrdmd5NWk2czI3NXkzMXBnMTQ0MncycnkifQ.AFa6uBMonN5zRZ3zKrFaKw';
+    mapboxgl.accessToken = 'pk.eyJ1IjoiZGFpbmlzIiwiYSI6ImNrdmZvaW84dzVmeGwydXF3c29lOHpia2MifQ.diOCf07ITIcGj54YuY1Y8g';
     const map = new mapboxgl.Map({
     container: 'map', // container ID
     style: 'mapbox://styles/mapbox/streets-v11', // style URL
