--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Kartes</title>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <h1>Karšu pārlūks</h1>
-    <div id='map' style='width: 400px; height: 300px;'></div>
+    <h1 class="display-1"><i class="bi bi-map"></i>&nbsp;Karšu pārlūks</h1>
+    <div class="container-fluid">
+    <div id='map' style='width: 100%; height: 600px;'></div>
+    </div>
     <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiZGFpbmlzIiwiYSI6ImNrdmZvaW84dzVmeGwydXF3c29lOHpia2MifQ.diOCf07ITIcGj54YuY1Y8g';
     const map = new mapboxgl.Map({
@@ -24,4 +27,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
-
