--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 </head>
-<body>    
-    <div class="container-fluid">
+<body>
     <h1 class="display-1"><i class="bi bi-map"></i>&nbsp;Karšu pārlūks</h1>
+    <div class="container-fluid">
+        <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
+        <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css" type="text/css">
     <div id='map' style='width: 100%; height: 600px;'></div>
     </div>
     <script>
@@ -23,6 +25,12 @@
     center: [23.76333, 56.69452], // starting position [lng, lat]
     zoom: 12 // starting zoom
     });
+    map.addControl(
+new MapboxDirections({
+accessToken: mapboxgl.accessToken
+}),
+'top-left'
+);
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
