--- a/meteo.html
+++ b/meteo.html
@@ -2,19 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>RainViewer API Example for Mapbox</title>
+    <title>Lietus mākoņu radara dati</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1" />
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js"></script>
-    <link
-      href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css"
-      rel="stylesheet"
-    />
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
   </head>
 
-  <body style="margin: 0px; padding: 0px;">
-    <div
-      id="map"
-      style="position: absolute; top: 0px; bottom: 0px; width: 100%;"
+  <body>
+    <h1 class="display-1"><i class="bi bi-umbrella"></i>&nbsp;Lietus mākoņi</h1>
+      <div id="map"
+      style="width: 100%; height: 600px;"
     ></div>
     <script>
       mapboxgl.accessToken = "pk.eyJ1IjoiZGFpbmlzIiwiYSI6ImNrdmZvaW84dzVmeGwydXF3c29lOHpia2MifQ.diOCf07ITIcGj54YuY1Y8g";
@@ -22,7 +21,7 @@
         container: "map",
         style: "mapbox://styles/mapbox/dark-v10",
         zoom: 6,
-        center: [-100, 47]
+        center: [23.76333, 56.69452]
       });
 
       window.map = map;
@@ -85,5 +84,6 @@
           .catch(console.error);
       });
     </script>
+    </div></div>
   </body>
 </html>
