--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>pagastu robežām (<a href="https://www.vzd.gov.lv/lv/pakalpojumi/generalizetas-administrativo-teritoriju-robezas-shp">VZD dati</a>).</li>
         </ul>
     </p>
-    <p>Lai izbrauciens būtu patīkamāks, pirms uzsākt kustību (arī tās laikā), lietotājs var noskaidrot, vai aiz devess pamales jau nedrūzmējas tumšu mākoņu bari. Datus mēs iegūstam ar Rainwiever API palīdzību.</p>
+    <p>Lai izbrauciens būtu patīkamāks, pirms uzsākt kustību (arī tās laikā), lietotājs var noskaidrot, vai aiz debess pamales jau nedrūzmējas tumšu mākoņu bari. Datus mēs iegūstam ar Rainwiever API palīdzību.</p>
     <h2>Demo</h2>
     <p><a href="karte.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Karte ar maršrutu nospraušanu</a>
     <a href="meteo.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Informācija par lietus mākoņiem</a></p>
