--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="display-1">Sveicināti!</h1>
     <p class="lead">Esam komanda <i class="bi bi-hurricane"></i>&nbsp;Izotopi un piedāvājam Jums aplikācijas <span class="badge bg-success">DIGITAL PATH</span> konceptu. Koncepts ir izstrādāts Atvērto ģeotelpisko datu hakatona skolēniem ietvaros. Komanda pārstāv <a href="https://ozolniekuvsk.lv">Ozolnieku vidusskolu</a>. Esam 12.&nbsp;klases skolnieces Evelīna un Evija. Ar padomu mums palīdz skolotājs Dainis Šantars.</p>
     <h2>Lielā ideja</h2>
-    <p>COVID-19 pandēmijas laikā, kad notiek mājsēdes, ir parādījušās daudz jaunas, kā arī saasinājušās jau esošas problēmas, kuras savu ietekmi uz cilvēka veselību ir tikai palielinājušas. Tā ir mūsu mentālā veselība, kā arī fiziskais stāvoklis. Liekais svars mēdz ar katru gadu tikai palielināties. Tas veicina veselības problēmas. Mūsu aplikācija nespēs ar visām šīm problēmām tikt galā, bet, musuprāt, tā varētu radīt motivāciju piedalīties fiziskās aktivitātēs un palīdzēt &ldquo;izvēdināt galvu&rdquo;.</p>
+    <p>COVID-19 pandēmijas laikā, kad notiek mājsēdes, ir parādījušās daudz jaunas, kā arī saasinājušās jau esošas problēmas, kuras savu ietekmi uz cilvēka veselību ir tikai palielinājušas. Tā ir mūsu mentālā veselība, kā arī fiziskais stāvoklis. Liekais svars mēdz ar katru gadu tikai palielināties. Tas veicina veselības problēmas. Mūsu aplikācija nespēs ar visām šīm problēmām tikt galā, bet, musuprāt, tā varētu radīt motivāciju piedalīties fiziskās aktivitātēs un palīdzēt &ldquo;izvēdinās galvu&rdquo;.</p>
     <p>Aplikācija palīdzēs velosipēdistiem, kuri izlēmuši atpūsties dabā. Te ir iespējams sastādīt maršrutus un arī apskatīties, vai nenāk lietus mākoņi. Fleksošana dabā spridzina!</p>
     <h2>Realizācija</h2>
     <h3>Aplikācijas dizains</h3>
@@ -30,10 +30,10 @@
             <li>pagastu robežām (<a href="https://www.vzd.gov.lv/lv/pakalpojumi/generalizetas-administrativo-teritoriju-robezas-shp">VZD dati</a>).</li>
         </ul>
     </p>
-    <p>Lai izbrauciens būtu patīkamāks, pirms uzsākt kustību (arī tās laikā), lietotājs var noskaidrot, vai aiz debess pamales jau nedrūzmējas tumšu mākoņu bari. Datus mēs iegūstam ar Rainwiever API palīdzību.</p>
+    <p>Lai izbrauciens būtu patīkamāks, pirms uzsākt kustību (arī tās laikā), lietotājs var noskaidrot, vai aiz devess pamales jau nedrūzmējas tumšu mākoņu bari. Datus mēs iegūstam ar Rainwiever API palīdzību.</p>
     <h2>Demo</h2>
-    <p><a href="karte.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Karte ar maršrutu nospraušanu</a>
-    <a href="meteo.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Informācija par lietus mākoņiem</a></p>
-    </div>
+    <p><a href="karte.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true"><i class="bi bi-map"></i>&nbsp;Karte ar maršrutu nospraušanu</a>
+    <a href="meteo.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true"><i class="bi bi-umbrella"></i>&nbsp;Informācija par lietus mākoņiem</a></p>
+</div>
 </body>
 </html>
