--- a/karte.html
+++ b/karte.html
@@ -13,6 +13,8 @@
 <body>
     <h1 class="display-1"><i class="bi bi-map"></i>&nbsp;Karšu pārlūks</h1>
     <div class="container-fluid">
+    <h1><span class="badge bg-info text-dark">Info</span></h1>
+    <p>Izvēlies maršruta sākuma punktu, tad beigu punktu. Sākuma un galapunktu var ierakstīt arī <span class="badge bg-secondary">A</span> un <span class="badge bg-secondary">B</span> lodziņos.</p>
         <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
         <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css" type="text/css">
     <div id='map' style='width: 100%; height: 600px;'></div>
@@ -33,5 +35,8 @@ accessToken: mapboxgl.accessToken
 );
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<p>&nbsp;</p>
+    <p><a href="index.html" class="btn btn-success active" role="button" data-bs-toggle="button" aria-pressed="true"><i class="bi bi-arrow-left-circle"></i>&nbsp;Atgriezties</a>
+<a href="meteo.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true"><i class="bi bi-umbrella"></i>&nbsp;Informācija par lietus mākoņiem</a></p>
 </body>
 </html>
