--- a/meteo.html
+++ b/meteo.html
@@ -84,6 +84,10 @@
           .catch(console.error);
       });
     </script>
-    </div></div>
+    </div>
+    <p>&nbsp;</p>
+    <p><a href="index.html" class="btn btn-success active" role="button" data-bs-toggle="button" aria-pressed="true"><i class="bi bi-arrow-left-circle"></i>&nbsp;Atgriezties</a>
+    <a href="karte.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true"><i class="bi bi-map"></i>&nbsp;Karte ar maršrutu nospraušanu</a>
+</div>
   </body>
 </html>
