--- a/karte.html
+++ b/karte.html
@@ -36,7 +36,7 @@ accessToken: mapboxgl.accessToken
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <p>&nbsp;</p>
-    <p><a href="index.html" class="btn btn-success active" role="button" data-bs-toggle="button" aria-pressed="true"><i class="bi bi-arrow-left-circle"></i>&nbsp;Atgriezties</a>
-<a href="meteo.html" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true"><i class="bi bi-umbrella"></i>&nbsp;Informācija par lietus mākoņiem</a></p>
+    <p><a href="index.html" class="btn btn-success active" role="button"><i class="bi bi-arrow-left-circle"></i>&nbsp;Atgriezties</a>
+<a href="meteo.html" class="btn btn-primary active" role="button"><i class="bi bi-umbrella"></i>&nbsp;Informācija par lietus mākoņiem</a></p>
 </body>
 </html>
